k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pool
  labels:
    app.kubernetes.io/name: pool
spec:
  selector:
    app.kubernetes.io/name: pool
  ports:
    - name: http
      port: 80
      targetPort: http
